# BeerGame-TheNextLevel

./: .env.example  .gitignore  AGENTS.md  AUTONOMOUS.md  CLAUDE.md  Makefile  README.md  claude-flow.config.json  pyproject.toml
.claude-flow/: daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  performance.json  security-audit.json  test-gaps.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
agents/: ruflo-config.yml  setup.md
agents/n8n-workflows/: README.md  agent-task-dispatcher.json  dependency-audit.json  deploy-on-staging-merge.json  report-generator.json  research-agent.json  test-runner.json
agents/prompts/: README.md  architect.md  canvas.md  gearbox.md  pipeline.md  research.md  watchdog.md
backend/: main.py
backend/api/: games.py  websocket.py
backend/services/: connection_manager.py  game_store.py
core/ai_players/: base.py  base.py,cover  rule_based.py  rule_based.py,cover
core/engine/: __init__.py  classic.py  game_engine.py  game_engine.py,cover  game_loop.py  order_processor.py  order_processor.py,cover  realtime.py
core/models/: __init__.py  __init__.py,cover  game.py  game.py,cover  geography.py  order.py  order.py,cover  player.py  player.py,cover  session.py
core/reporting/: __init__.py  classic_report.qmd  report_generator.py
docs/: secrets.md
docs/game-design/: classic-research.md  (+1 more)
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js
tests/: conftest.py  test_remaining_gaps.py
(+75 files in other folders)
